Authentication For Login Page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,7 @@
                                     <div class="col-6">
                                         <input type="submit"
                                             class="btn btn-square confirmBtn border border-dark rounded p-2"
-                                            (click)='clearData()' [routerLink]="['/login']" data-dismiss="modal"
+                                            (click)='clearData()' data-dismiss="modal"
                                             value="Yes" />
                                     </div>
                                     <div class="col-6 text-right">
