UI function of delete Customer updated

--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -109,7 +109,7 @@
                                                             <div class="col-6 text-left">
                                                                 <button
                                                                     class="btn btn-size confirmBtn border border-dark rounded p-2"
-                                                                    (click)='deleteCustomer(deleteData)'
+                                                                    (click)='deleteCustomer(deleteData); getListAtStart()'
                                                                     data-dismiss="modal">Yes</button>
                                                             </div>
                                                             <div class="col-6 text-right">
