Edit Password page added in dropdown

--- a/src/app/updatepassword/updatepassword.component.html
+++ b/src/app/updatepassword/updatepassword.component.html
@@ -12,11 +12,12 @@
                         <label for="password" class="d-inline label">Current Password</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
-                    <div class="col-sm-6 col-12">
+                    <div class="col-sm-6 col-12" (click)="isPresentPassword = false">
                         <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('present_password') }"
                             type="password" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{6,}$"
                             id="present_password" placeholder=" Enter Current Password"
                             formControlName="present_password" required>
+                        <div *ngIf="isPresentPassword" class="feedback">Please Enter the correct Password</div>
                         <div class="feedback" *ngIf="isValid('present_password')">
                             <span *ngIf="customerForm.controls.present_password.errors.required">Field cannot be
                                 Empty!!!</span>
@@ -34,7 +35,7 @@
                         <label for="password" class="d-inline label">New Password</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
-                    <div class="col-sm-6 col-12">
+                    <div class="col-sm-6 col-12" (click)="isCurrentMatch=false">
                         <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('password') }" type="password"
                             pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{6,}$" id="password"
                             placeholder=" Enter New Password" formControlName="password" required>
@@ -54,7 +55,7 @@
                         <label for="confirm_password" class="d-inline label">Confirm Password</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
-                    <div class="col-sm-6 col-12">
+                    <div class="col-sm-6 col-12" (click)="isMatch = false">
                         <input class="rounded inp w-100"
                             [ngClass]="{'invalid' : isValid('confirm_password') || isMatch}" type="password"
                             pattern="(?=^.{6,10}$)(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&amp;*()_+}{&quot;:;'?/&gt;.&lt;,])(?!.*\s).*$"
@@ -71,7 +72,7 @@
                 <div class="row text-center">
                     <div class="col-sm-1"></div>
                     <div class="col-sm-3 resend">
-                        <a style="color: #46afec;" [routerLink]="['/login']"><strong>Cancel</strong></a>
+                        <a style="color: #46afec;" [routerLink]="['/home']"><strong>Cancel</strong></a>
                     </div>
                     <div class="col-sm-5 text-center">
                         <button type="submit" [disabled]="!customerForm.valid"
