--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                     [routerLink]='["/home"]'> Profile </a>
                 <div class="dropdown-content">
                     <a [routerLink]='["/myaccount"]'>My Account</a>
-                    <a (click)="editPassword()" [routerLink]='["/editpassword"]'>Edit Password</a>
+                    <a (click)="editPassword()" [routerLink]='["/editpassword"]'>Reset Password</a>
                     <a href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
                 </div>
             </div>
